deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: sample-app
  labels:
    app: sample-app
spec:
  selector:
    app: sample-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30007
  type: NodePort
